crates/htui/tests/snapshots/box_settings__no_boxes.snap
---
source: crates/htui/tests/box_settings.rs
expression: frame
---
no box is registered for this user yet

probe spec: seed · <digest>


























s spec · r reload
