crates/htui/tests/snapshots/box_settings__spec_editor.snap
---
source: crates/htui/tests/box_settings.rs
expression: frame
---
probe spec: seed + stored overlay · <digest>
stored overlay box_probe_spec, merged into the seed by name; blank clears it
{
  "tools": {
    "terraform": {
      "kind": "path",
      "names": [
        "terraform"
      ],
      "version": {
        "args": [
          "version"
        ],
        "pattern": "^Terraform v(\\S+)"
      }
    }
  }
}











Ctrl+s saves · Esc cancels · Enter breaks the line · blank clears
